# open-gl-engine

./: CMakeLists.txt  open-gl-engine.cpp  open-gl-engine.h
headers/: app.hpp  input.hpp  renderer.hpp  window.hpp
sources/: app.cpp  input.cpp  main.cpp  renderer.cpp  window.cpp
